# Namepicker

./: CMakeLists.txt  Namepicker.cpp  Namepicker.sln  Namepicker.vcxproj  Namepicker.vcxproj.filters  README.md
data/: constraints.txt  roster.txt
src/: constraints.cpp  constraints.h  io_utils.cpp  io_utils.h  main.cpp  namesorter.cpp  namesorter.h
